--- a/info/task_description.html
+++ b/info/task_description.html
@@ -57,13 +57,13 @@
 
 
 <div class="for_info_only">
-    <textarea data-code="python">
+<textarea data-code="python">
 </textarea>
 </div>
 
 <p class="for_info_only">
     <strong>How it is used: </strong>
-
+    This concept can be useful for game development. And a good example of combinatorial optimisation process.
 </p>
 
 <p>
