apply Ryan's edits

--- a/info/task_description.html
+++ b/info/task_description.html
@@ -23,21 +23,23 @@
 </p>
 
 <p>
-    Texas holdem uses classical <a href="http://en.wikipedia.org/wiki/List_of_poker_hands">poker hand list</a>:
+    Texas holdem uses the classical <a href="http://en.wikipedia.org/wiki/List_of_poker_hands">poker hand list</a>:
     Straight flush, Four of a kind, Full house, Flush, Straight, Three of a kind, Two Pair, One Pair and High card.
 </p>
 
 <p>
-    Because of the presence of community cards in Texas hold 'em, different players' hands can often run very close in value.
+    Because of the presence of community cards in Texas hold 'em, different players' hands can often come very close in value.
     As a result, it is common for kickers to be used to determine
-    the winning hand and also for two hands (or maybe more) to tie.
+    the winning hand for cases where two or more hands tie.
     A kicker is a card which is part of the five-card poker hand,
     but is not used in determining a hand's rank. For instance, in the hand A-A-A-K-Q, the king and queen are kickers.
+
 </p>
 
 <p>
-    But in our Texas holdem variation ties are impossible because suits are ordering and for
-    the same rank cards the highest are determined by the suit. So "Td" are higher than "Tc", but lower then "Jc".
+    But in our Texas holdem variation ties are impossible because suits are ordered, meaning the for
+    same rank cards the higher value is determined by the suit. So "Td" is higher than "Tc", but lower then "Jc".
+
 </p>
 
 <p>
@@ -57,13 +59,15 @@
 
 
 <div class="for_info_only">
-<textarea data-code="python">
-</textarea>
+    <strong>Example:</strong>
+<textarea data-code="python">texas_referee("Kh,Qh,Ah,9s,2c,Th,Jh") == "Ah,Kh,Qh,Jh,Th"
+texas_referee("Qd,Ad,9d,8d,Td,Jd,7d") == "Qd,Jd,Td,9d,8d",</textarea>
 </div>
 
 <p class="for_info_only">
     <strong>How it is used: </strong>
-    This concept can be useful for game development. And a good example of combinatorial optimisation process.
+    This concept is a good example of combinatorial optimisation process, and could come in handy should you make a poker game in Python.
+
 </p>
 
 <p>
