quote story fix

--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,12 +1,10 @@
-<blockquote>
-    <em>
+<div class="story">
     There are few things that are so unpardonably neglected in our country as poker. The upper class knows very little about poker. Now and
     then you find ambassadors who have sort of a general knowledge of poker, but the ignorance of the people is fearful. Why, I have known
     clergymen, good men, kind-hearted, liberal, sincere, and all that, who did not know the meaning of a "flush". It is enough to make one
     ashamed of the species.<br>
-    -- Mark Twain</em>
-    <br>
-</blockquote>
+    -- Mark Twain
+</div>
 
 <p>
     <a href="http://en.wikipedia.org/wiki/Texas_hold_'em">Texas hold'em</a> is a variation of the standard card game of poker.
