--- a/info/task_description.html
+++ b/info/task_description.html
@@ -72,5 +72,8 @@ texas_referee("Qd,Ad,9d,8d,Td,Jd,7d") == "Qd,Jd,Td,9d,8d",</textarea>
 
 <p>
     <strong>Precondition:</strong>
-
 </p>
+<pre>
+cards_quantity == 7
+All cards correct and unique.
+</pre>
