--- a/info/task_description.html
+++ b/info/task_description.html
@@ -18,8 +18,9 @@
     Cards separated by commas.
 </p>
 <p>
-    Card ranks (from highest to lower): Ace - "A", King - "K", Queen - "Q", "J" - Jack, 10 - "T" and from "9" to "2".<br>
-    Card suits (from lowest to highest): Spades - "s", Clubs - "c", Diamonds - "d", Hearts - "h".
+    The descending ranks are: "A" (Ace), "K" (King), "Q" (Queen), "J" (Jack), "T" (Ten), and "9" to "2".<br>
+
+    The descending suits are "h" (hearts), "d" (diamonds), "c" (clubs), "s" (spades).
 </p>
 
 <p>
@@ -37,8 +38,9 @@
 </p>
 
 <p>
-    But in our Texas holdem variation ties are impossible because suits are ordered, meaning the for
-    same rank cards the higher value is determined by the suit. So "Td" is higher than "Tc", but lower then "Jc".
+    In our version of Texas Hold'em cards of differing suits have different values.
+    This means that there is only ever <b>one</b> best five-card hand to return.
+    So "Td" is higher than "Tc", but lower then "Jc".
 
 </p>
 
